--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -44,12 +44,12 @@ ott_ott_continues:0 "Ottoman aggression"
 ott_german_air_designs_bonus:0 "German Air Designs"
 OTT_naval_doctrine_bonus:0 "Ottoman Naval Doctrine"
 OTT_naval_doctrine_bonus:0 "Ottoman Naval Doctrine"
-OTT_parliament_dissolved_tt:0 "§RThe parliament will be dissolved, freeing us from the burdens of political strife.§!\n"
 OTT_opposition_tt:0 "§ROpposition will be silenced for the benefit of the State.§!\n"
 OTT_constitution_tt:0 "§RStrength of new Constitution will depend on the compromise reached between the Monarch and the Parliament.§!\n"
+OTT_corruption_unlocked_tt:0 "National focus §YFight Corruption§! unlocked"
 OTT_corruption1_tt:0 "§RThis path could deal a serious blow to corrupt groups in our Empire.§!\n"
 OTT_corruption2_tt:0 "§RSelf-serving cliques within our glorious army will be disbanded.§!\n"
-OTT_corruption3_tt:0 "§RGetting rid of shady underground organisations will allow us to rebuild our nation in peace.§!\n"
+OTT_corruption3_tt:0 "§RReorganising our intelligence services will allow us to rebuild our nation in peace.§!\n"
 OTT_reform_resistance_tt:0 "§ROur old-headed bureaucracy might show resistance to reforms.§!\n"
 OTT_reforms_tt:0 "§RThese reforms might put an end to our decline.§!\n"
 OTT_admin_opda_tt:0 "§RWe need a robust administrative structure to gain full control of our economy.§!\n"
@@ -57,13 +57,17 @@ OTT_opda_focus_tt:0 "§RWe need to end the OPDA if we are to gain full control o
 OTT_creditors_tt:0 "§ROur creditors need to agree§!\n"
 OTT_turkestan_tt:0 "§RTurkestan views us as a potential rival, and might reject our diplomatic advances.§!\n"
 OTT_NOT_IMPLEMENTED_YET:0 "§Y---THIS PATH IS NOT IMPLEMENTED YET---§!\n"
-OTT_gendarmerie_tt:0 "§RReformed Gendarmerie Corps will help us quell rebellions before they even begin.§!\n"
+OTT_gendarmerie_tt:0 "Reformed Gendarmerie Corps will help us quell rebellions before they even begin.\n"
 camel_corpse:0 "Imperial Camel Corps"
 OTT_camel_corpse_effect:0 "Enables §HImperial Camel Corps§!\n§HCavalry\n    Desert§!\n      Attack: §G+15%§!\n      Defense: §G+5%§!\n      Movement: §G+3%§!\n\n"
-OTT_desert_tt:0 "§ROttoman Desert Corps will help us control desert areas better.§!\n"
+OTT_desert_tt:0 "Ottoman Desert Corps will help us control desert areas better.\n"
 OTT_german_approval_tt:0 "§RThe German Empire needs to agree§!\n"
 ott_opda_flag_tt:0 "§RWe need to get rid of the OPDA before we can make investments§!\n"
 ott_opda_end_tt:0 "§GEconomy, Air Force and Navy focuses are now unlocked!§!\n"
+ott_politicians_arrested_tt:0 "Remove §YPoliticians§!:\n"
+ott_new_reformers:0 " The New Reformers\n"
+OTT_investigation:0 " The Investigation"
+ott_arbitrary_rulings:0 " Arbitrary rulings\n"
 OTT_theorists_unlocked_tt:0 "\n§GTheorists unlocked§!\n"
 OTT_uzel_unlocked_tt:0 "§GUzel unlocked§!\n"
 OTT_sarsilmaz_unlocked_tt:0 "§GSarsılmaz unlocked§!\n"
@@ -72,6 +76,7 @@ OTT_mke_unlocked_tt:0 "§GMKE unlocked§!\n"
 OTT_hurkus_unlocked_tt:0 "§GHürkuş unlocked§!\n"
 OTT_golcuk_unlocked_tt:0 "§GGölcük Dockyards unlocked§!\n"
 axis_defeated:0 "Arabian Axis Defeated"
+ott_german_embargo:0 " German Embargo"
 
 ### Ideas ###
 ott_decline:0 "Ottoman Decline"
@@ -91,6 +96,8 @@ ott_jews_idea:0 "Jewish Funds"
 ott_arab_revolt:0 "Arab Revolt"
 ott_denbts:0 "Expenses"
 ott_denbts_large:0 "Expenses"
+ott_denbts_huge:0 "Debt payments"
+ott_denbts_huge_ger:0 "Ottoman payments"
 ott_ger_aid:0 "German Military Aid"
 ott_education_reform_idea:0 "Reformed Education"
 ott_school_of_agriculture_idea:0 "Schools of Agriculture"
@@ -113,6 +120,7 @@ ott_protests_idea:0 "Opposition Protests"
 ott_renewed_autocracy:0 "The New Autocracy"
 ott_compromise_constitution:0 "A Compromise Constitution"
 ott_solid_constitution:0 "Solid Constitution"
+ott_investigation_idea:0 "The Investigation"
 
 ### Parties ###
 OTT_totalist_party:0 "Misak-ı Avam"
@@ -157,7 +165,7 @@ OTT_fight_corruption:0 "Fight Corruption"
 OTT_fight_corruption_desc:0 ""
 OTT_eliminate_military_factions:0 "Eliminate Military Factions"
 OTT_eliminate_military_factions_desc:0 ""
-OTT_end_paramilitary:0 "End Paramilitary Organisations"
+OTT_end_paramilitary:0 "Rebuild Ottoman Intelligence"
 OTT_end_paramilitary_desc:0 ""
 OTT_mecidian_reforms:0 "Mecidian Reforms"
 OTT_mecidian_reforms_desc:0 ""
@@ -695,12 +703,12 @@ ott.88.d:0 "An angry crowd gathered in front of the Imperial Palace today, deman
 ott.88.a:0 "Arrest these filthy marauders"
 ott.88.b:0 "Do nothing, they will give up eventually"
 
-ott.89.t:0 "The Beşiktaş Massacre"
-ott.89.d:0 "Attempts to arrest protesters and end the riots rapidly took a turn for the worse as an army patrol opened fire on hostile protesters in the Beşiktaş district of Istanbul late last night. Although the soldiers involved claim that they felt genuinely threatened and fired only when the mob advanced, the public is unlikely to believe their story."
+ott.89.t:0 "The Galata Massacre"
+ott.89.d:0 "An army patrol opened fire on hostile protesters in the affluent Galata quarter of Kostantiniyye late last night. Although the soldiers involved claim that they felt genuinely threatened and fired only when the mob advanced, the public is unlikely to believe their story."
 ott.89.a:0 "This does not bode well..."
 
 ott.90.t:0 "The New Reformers?"
-ott.90.d:0 "The massacre at Beşiktaş provoked a major outrage from the public. Following a series of threats from more extremist and disgruntled sectors of our society, major opposition parties, and also pressure from the army high command, the undersecretary of Ministry of the Interior proposed the reinstatement of Constitution, and a major reshuffling of our government in order to appease the dissenters and maybe bring some stability back to the Empire. Shall we proceed?"
+ott.90.d:0 "The massacre at Galata provoked a major outrage from the public. Following a series of threats from more extremist and disgruntled sectors of our society, major opposition parties, and also pressure from the army high command, the undersecretary of Ministry of the Interior proposed the reinstatement of Constitution, and a major reshuffling of our government in order to appease the dissenters and maybe bring some stability back to the Empire. Shall we proceed?"
 ott.90.a:0 "What are you waiting for? Swear them in!"
 ott.90.b:0 "Supress the malcontents by force of arms!"
 
@@ -777,7 +785,7 @@ ott.106.b:0 "They shall have parliamentary oversight"
 ott.106.c:0 "I am the law"
 
 ott.107.t:0 "Centralisation or Decentralisation?"
-ott.107.d:0 "While the Article 108 of the Ottoman Constitution declares that the vilayets shall be governed by the principle of 'decentralisation', this de jure principle has never transformed into action. Now that our sweeping administrative reforms are underway, the proponents of the doctrine of 'Adem-i Merkeziyet' are again asserting that subordinating local decision-making to the central bureaucracy results in tremendous inefficiency and pointless delays. With our distant subjects chafing under the direct rule of Kostantiniyye, it would be wise to grant more power to local governments over our centrally-appointed governors. Shall we grant greater powers and freedoms to the administrative councils of our Vilayets?"
+ott.107.d:0 "While the Article 108 of the Ottoman Constitution declares that the vilayets shall be governed by the principle of 'decentralisation', this de jure principle has never transformed into action. Now that our sweeping administrative reforms are underway, the proponents of the doctrine of 'Adem-i Merkeziyet' are again asserting that subordinating local decision-making to the central bureaucracy results in tremendous inefficiency and pointless delays. With our distant subjects chafing under the direct rule of Kostantiniyye, it would be wise to give more power to local governments over our centrally-appointed governors. Shall we grant greater powers and freedoms to the administrative councils of our Vilayets?"
 ott.107.a:0 "More power to the local governments!"
 ott.107.b:0 "Frankly, I don't see the need for reform"
 
@@ -930,13 +938,13 @@ ott.142.t:0 ""
 ott.142.d:0 ""
 ott.142.a:0 ""
 
-ott.143.t:0 ""
-ott.143.d:0 ""
-ott.143.a:0 ""
+ott.143.t:0 "German Empire has been defeated"
+ott.143.d:0 "The unfortunate fate of the French and British Empires has now befallen the German Empire. They have lost control over their homelands, and are unable to receive our debt payments. Their banks and various state-owned assets have been seized by the invaders, and we are under no obligation to pay them anything. The Sublime Porte has declared that our debts to the German Empire and it's state and private banks are null and void."
+ott.143.a:0 "This must be our lucky century!"
 
-ott.144.t:0 ""
-ott.144.d:0 ""
-ott.144.a:0 ""
+ott.144.t:0 "Austrian Empire has been defeated"
+ott.144.d:0 "The unfortunate fate of the French and British Empires has now befallen the Austrian Empire. They have lost control over their homelands, and are unable to receive our debt payments. Their banks and various state-owned assets have been seized by the invaders, and we are under no obligation to pay them anything. The Sublime Porte has declared that our debts to the Austrian Empire and it's state and private banks are null and void."
+ott.144.a:0 "This must be our lucky century!"
 
 ott.145.t:0 "Renegotiating German Payments"
 ott.145.d:0 "The massive OPDA payments collected by the German Empire every month are breaking our back. If we are to survive as a sovereign state, we need to take control of our own economy. At the current rate, it will take us until 1960 to pay back all our foreign debt, but our top diplomats suggest there might be another way. With the recent trouble Germany finds itself in, maybe we can reach a deal to forego the interest and pay only the principal we owe them. This one-time payment could potentially be made in form of weapons, supplies or consumer goods, all of which they badly need right about now..."
