--- a/localisation/KR_Loading_Tips_l_english.yml
+++ b/localisation/KR_Loading_Tips_l_english.yml
@@ -38,7 +38,7 @@ LOADING_TIP_35:0 "Talk of imminent threat to our national security through the a
 LOADING_TIP_36:0 "France has no friends, only interests. \n- Charles de Gaulle"
 LOADING_TIP_37:0 "Yes, it is Europe, from the Atlantic to the Urals, it is Europe, it is the whole of Europe, that will decide the fate of the world. \n- Charles de Gaulle"
 LOADING_TIP_38:0 "Heroes never die - instead they fall, and the soil, by drinking their blood, borns them again... \n- Ioannis Metaxas"
-LOADING_TIP_39:0 "If you don't have ammunition, you still have bayonets. Fix bayonets! \n- Field Marshal Mustafa Kemal Pasha"
+LOADING_TIP_39:0 "If you don't have ammunition, you still have bayonets. Fix bayonets! \n- Lieutenant Colonel Mustafa Kemal Bey"
 LOADING_TIP_40:0 "My name is surrounded with such hate and fear that no one can judge what is the truth and what is false, what is history and what is myth. \n- Baron Roman Ungern von Sternberg"
 LOADING_TIP_41:0 "It would appear that we select presidents as we select jurors, on the ground that they have no opinions that can be discovered. \n- Norman Thomas"
 LOADING_TIP_42:0 "Freedom means Freedom for the Group, not Freedom for the Individual. Men must not be slaves to other men, but they must be slaves to their group. \n- Liang Qichao"
@@ -89,7 +89,7 @@ LOADING_TIP_86:0 "We are on the verge of events, the likes of which the world ha
 LOADING_TIP_87:0 "One day, the Great Russian Republic will be much stronger, richer and freer than the old Tsarist Empire. But how much blood will be shed. \n- Boris Savinkov"
 LOADING_TIP_88:0 "There is one certainty of the future of a people of the resources, intelligence and character of the people of the United States—that is, prosperity. \n- Herbert Hoover"
 LOADING_TIP_89:0 "I prefer a government run like hell by Filipinos to a government run like heaven by Americans. \n- Manuel L. Quezon"
-LOADING_TIP_90:0 "The Ottoman Empire is the strongest state. For you are trying to cause its collapse from the outside, and we from the inside, but still it does not collapse. \n- Grand Vizier Fuad Pasha, to a Western ambassador"
+LOADING_TIP_90:0 "Ottoman Empire is the strongest state. For you are trying to cause its collapse from the outside, and we from the inside, but still it does not collapse. \n- Grand Vizier Fuad Pasha, to a Western ambassador"
 LOADING_TIP_91:0 "What can you expect of us, the children of slaves, brought up by eunuchs? \n- Sultan Abdulhamid II of Ottoman Empire, to a British friend"
 LOADING_TIP_92:0 "A word of command has made these silent figures our enemies; a word of command might transform them into our friends. \n- Erich Paul Remark, Im Westen nichts Neues"
 LOADING_TIP_93:0 "We possess a European symbol which belongs to all nations of Europe equally; this is the crown of the Holy Roman Empire, which embodies the tradition of Charlemagne. \n- Kaiser Otto I of Austria"
