--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -420,7 +420,7 @@ STATE_417:0 "Hamadan"
 STATE_418:0 "Semnan"
 STATE_419:0 "Tebriz"
 STATE_420:0 "Gilan"
-STATE_421:0 "Kurdistan"
+STATE_421:0 "Kermanshah"
 STATE_422:0 "Ceylon"
 STATE_423:0 "Madurai"
 STATE_424:0 "Andhra"
