The Great war of the two Hueys has come to an end!

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -279,7 +279,7 @@ TEX_reconstruction_policy:0 "Reconstructing America"
 TEX_abc_founded:0 "American Broadcasting Corporation"
 TEX_populist_education:0 "Populist Education"
 TEX_solider_bill:0 "G.I Bill"
-
+TEX_kingfish_loyalty:0 "Loyalty to the Kingfish"
 ### Parties ###
 TEX_totalist_party:0 "ACP"
 TEX_totalist_party_long:0 "American Communist Party"
