implemented CAR assassination plot chain

--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -58,9 +58,6 @@ CNT_advisors_france:0 "French Assistance"
 CNT_advisors_england:0 "English Assistance"
 CNT_advisors_italysoc:0 "Italian Assistance"
 CNT_advisors_soviet:0 "Soviet Assistance"
-CAR_advisors_portugal:0 "Portuguese Assistance"
-CAR_advisors_austria:0 "Austrian Assistance"
-CAR_advisors_italianfed:0 "Italian Assistance"
 SPR_advisors_natfrance:0 "French Assistance"
 SPR_advisors_russia:0 "Russian Assistance"
 SPR_advisors_germany:0 "German Assistance"
@@ -381,6 +378,53 @@ sprc.304.d:0 "With our trade deal with Portugal, we have been able to stockpile 
 sprc.304.a:0 "For Xavier and the Pope!"
 sprc.305.t:0 "Italian Supplies and Arms"
 sprc.305.d:0 "With our trade deal with [ITA.GetNameDef], we have been able to stockpile some arms and supplies to outfit a well-equipped militia unit."
+
+sprc.306.t:0 "A Plot is Discovered"
+sprc.306.d:0 "Our agents have discovered a plot to kill the Spanish Crown Prince - we think the Carlists are behind it, clearly wanting to pave the path for Xavier to ascend to the Spanish throne. How should we react?"
+sprc.306.a:0 "Use it as leverage with the Kingdom"
+sprc.306.b:0 "Let them do it"
+
+sprc.307.t:0 "A CNT-FAI Offer"
+sprc.307.d:0 "The CNT-FAI has secretly approached us with information they claim could save a very important life - namely that of the royal heir. If we surrender to them, they will grant clemency for the government and Royal Family. If we do not, the life of the heir and the future of the kingdom will be in serious jeapordy. That is, of course, if we believe them."
+sprc.307.a:0 "Never! - the royal family is safe"
+sprc.307.b:0 "For the sake of the royal family, we should agree"
+
+sprc.308.t:0 "[From.GetNameDef] Refuses"
+sprc.308.d:0 "Perhaps they do not believe us, or perhaps they value the lives of the royal family so little...either way, the [From.GetAdjective] government has refused our offer of information on the Carlist plot."
+sprc.308.a:0 "So be it!"
+
+sprc.309.t:0 "The Kingdom Surrenders"
+sprc.309.d:0 "The Kingdom of Spain agreed to surrender to save the lives of the Royal Family. Now much of Spain is under our control and we shall crush the Carlists."
+sprc.309.a:0 "The Carlists are next!"
+
+sprc.310.t:0 "Plot Intercepted by the CNT-FAI"
+sprc.310.d:0 "Our plot to assassinate the royal heir was, it seems, intercepted by the CNT-FAI...who used the plot to force the royal family to surrender to them, so they could go into protected hiding. We have, it appears, delivered one enemy right into the hands of another."
+sprc.310.a:0 "It was worth the shot"
+
+sprc.311.t:0 "Assassination Plot Fails!"
+sprc.311.d:0 "A Carlist plot to assassinate the royal heir only barely failed this morning. A bomb went off when the regent was reviewing troops, but he was only wounded and is expected to pull through."
+sprc.311.a:0 "That's a relief!"
+
+sprc.312.d:0 "Our plot to assassinate the royal heir has failed. It seems the crown prince was injured by our bomb, but is expected to fully recover from his injuries."
+sprc.312.a:0 "Foiled!"
+
+sprc.313.t:0 "The Crown Prince is Dead!"
+sprc.313.d:0 "Last night a group of assassins killed the crown prince! He had been in the Regency position with his father's coma. But now there is no true heir to the throne! Someone must act quickly to keep the country together!"
+sprc.313.a:0 "Miguel Ferrer takes control"
+sprc.313.b:0 "Franco Bahamonde becomes the regent"
+sprc.313.c:0 "J.M. Gil-Robles Quiñones retains the government"
+
+sprc.314.t:0 "The Kingdom of Spain Gives In"
+sprc.314.d:0 "With the assassination of the Crown Prince the Kingdom has been thrown into even more chaos than ever. Their government has agreed to join our cause and to crown Xavier as the King of Spain in order for peace!"
+sprc.314.a:0 "Long live the king!"
+
+sprc.315.t:0 "Xavier Crowned King of Spain"
+sprc.315.d:0 "With the assassination of the Crown Prince, the Kingdom of Spain has been thrown into further chaos...and their government has decided to join the Carlist cause and crowned Xavier as king of Spain in order to make peace with their Carlist foes."
+sprc.315.a:0 "We will defeat them anyhow."
+
+sprc.316.t:0 "Crown Prince Assassinated"
+sprc.316.d:0 "The Crown Prince has been successfully assassinated. Though the Kingdom of Spain has been thrown even further into chaos now that there is no heir, they have turned the regency over to [SPR.GetLeader] rather than crown Xavier. Even so, our plot has done what it set out to do."
+sprc.316.a:0 "We will see Xavier crowned yet!"
 
 ### Post-War ###
 
