--- a/localisation/KR_Spain_Carlist_l_english.yml
+++ b/localisation/KR_Spain_Carlist_l_english.yml
@@ -1,6 +1,8 @@
 ﻿l_english:
 
 ### National Foci ###
+CAR_assassinate_prince:0 "Assassinate the Crown Prince"
+CAR_assassinate_prince_desc:0 "Our agents believe that they can kill the Crown Prince - this would clear help clear the road to Xavier becoming the king and put our enemies into chaos."
 CAR_election_success:0 "Election Success"
 CAR_election_success_tooltip:0 "During the Elections of 1937, Spain has seen an unprecedented surge of left-wing voters. The C.N.T. has been put in power, but Spain is still on the hinge of disaster.\n\n"
 CAR_aftermath_of_civil_war:0 "Aftermath of the Civil War"
@@ -51,6 +53,12 @@ CAR_black_monday:0 "Aftermath of the Black Monday"
 CAR_portuguese_economic_cooperation:0 "Economic Cooperation with Portugal"
 CAR_italian_economic_cooperation:0 "Economic Cooperation with Italy"
 CAR_french_economic_cooperation:0 "Economic Cooperation with France"
+CAR_advisors_portugal:0 "Portuguese Assistance"
+CAR_advisors_austria:0 "Austrian Assistance"
+CAR_advisors_italianfed:0 "Italian Assistance"
+
+### Tooltips ###
+CAR_begin_plot:0 "Enact the plan to kill the Crown Prince... this could take some time to complete.\n"
 
 ### Parties ###
 CAR_totalist_party:0 "POUM"
