Changing parties loc style for BUR/PHL/SIA

--- a/localisation/KR_Burma_l_english.yml
+++ b/localisation/KR_Burma_l_english.yml
@@ -1,25 +1,25 @@
 ﻿l_english:
 
 ### Parties ###
-BUR_totalist_party:0 "CPB"
+BUR_totalist_party:0 "Communist Party of Burma"
 BUR_totalist_party_long:0 "Communist Party of Burma"
-BUR_radical_socialist_party:0 "PPBFW"
+BUR_radical_socialist_party:0 "People's Party of Burma Farmers and Workers"
 BUR_radical_socialist_party_long:0 "People's Party of Burma Farmers and Workers"
-BUR_syndicalist_party:0 "BSP"
+BUR_syndicalist_party:0 "Burma Syndicalist Party"
 BUR_syndicalist_party_long:0 "Burma Syndicalist Party"
 BUR_social_democrat_party:0 "Sinyetha"
-BUR_social_democrat_party_long:0 "Poor Man's Party"
-BUR_social_liberal_party:0 "Thakins"
-BUR_social_liberal_party_long:0 "Dobama Asiayone"
+BUR_social_democrat_party_long:0 "Sinyetha(Poor Man's Party)"
+BUR_social_liberal_party:0 "Dobama Asiayone"
+BUR_social_liberal_party_long:0 "Dobama Asiayone(We Burmans Association)"
 BUR_market_liberal_party:0 "BDP"
 BUR_market_liberal_party_long:0 "Burma Democratic Party"
-BUR_social_conservative_party:0 "United GCBA"
-BUR_social_conservative_party_long:0 "Ngawbinwsaing"
-BUR_authoritarian_democrat_party:0 "Royalist"
-BUR_authoritarian_democrat_party_long:0 "Konbaung dynasty supporters"
-BUR_paternal_autocrat_party:0 "NUF"
+BUR_social_conservative_party:0 "Ngawbinwsaing"
+BUR_social_conservative_party_long:0 "Ngawbinwsaing(Five Flowers Alliance)"
+BUR_authoritarian_democrat_party:0 "Privy Council"
+BUR_authoritarian_democrat_party_long:0 "Privy Council of Burma"
+BUR_paternal_autocrat_party:0 "National United Front"
 BUR_paternal_autocrat_party_long:0 "National United Front"
-BUR_national_populist_party:0 "USDP"
+BUR_national_populist_party:0 "Union Solidarity and Development Party"
 BUR_national_populist_party_long:0 "Union Solidarity and Development Party"
 
 ### Opinion Modifiers ###
