--- a/localisation/KR_Philippines_l_english.yml
+++ b/localisation/KR_Philippines_l_english.yml
@@ -10,27 +10,27 @@ PHL_Sabah_purchase:0 "Purchase of Sabah Agreement"
 PHL_Sabah_income:0 "Purchase of Sabah Agreement"
 
 ### Parties ###
-PHL_totalist_party:0 "Communist Party of the Philippines"
+PHL_totalist_party:0 "Partido Komunista ng Pilipinas"
 PHL_totalist_party_long:0 "Partido Komunista ng Pilipinas(Communist Party of the Philippines)"
-PHL_radical_socialist_party:0 "Socialist Labour's Party"
+PHL_radical_socialist_party:0 "Sosyalistang Partido ng Paggawa"
 PHL_radical_socialist_party_long:0 "Sosyalistang Partido ng Paggawa(Socialist Labour's Party)"
-PHL_syndicalist_party:0 "Revolutionary Workers' Party"
+PHL_syndicalist_party:0 "Rebolusyonaryong Partido ng Manggagawà ng Pilipinas"
 PHL_syndicalist_party_long:0 "Rebolusyonaryong Partido ng Manggagawà ng Pilipinas(Revolutionary Workers' Party)"
-PHL_social_democrat_party:0 "Proletariat Democrat Party"
+PHL_social_democrat_party:0 "Partido Proletaryo Demokratiko"
 PHL_social_democrat_party_long:0 "Partido Proletaryo Demokratiko(Proletariat Democrat Party)"
-PHL_social_liberal_party:0 "Progressive Party"
+PHL_social_liberal_party:0 "Partido Progresista"
 PHL_social_liberal_party_long:0 "Partido Progresista(Progressive Party)"
-PHL_market_liberal_party:0 "Liberal Party of the Philippines"
+PHL_market_liberal_party:0 "Partido Liberal ng Pilipinas"
 PHL_market_liberal_party_long:0 "Partido Liberal ng Pilipinas(Liberal Party of the Philippines)"
-PHL_social_conservative_party:0 "Brotherhood Party"
+PHL_social_conservative_party:0 "Partido Ang Kapatiran"
 PHL_social_conservative_party_long:0 "Partido Ang Kapatiran(Brotherhood Party)"
-PHL_authoritarian_democrat_party:0 "Nationalist Party"
+PHL_authoritarian_democrat_party:0 "Partido Nasyonalista"
 PHL_authoritarian_democrat_party_long:0 "Partido Nasyonalista(Nationalist Party)"
-PHL_authoritarian_democrat_party_KTP:0 "Executive Commission of the Philippines"
+PHL_authoritarian_democrat_party_KTP:0 "Komisyong Tagapagpaganap ng Pilipinas"
 PHL_authoritarian_democrat_party_KTP_long:0 "Komisyong Tagapagpaganap ng Pilipinas(Executive Commission of the Philippines)"
-PHL_paternal_autocrat_party:0 "New Society Movement"
+PHL_paternal_autocrat_party:0 "Kilusang Bagong Lipunan"
 PHL_paternal_autocrat_party_long:0 "Kilusang Bagong Lipunan(New Society Movement)"
-PHL_national_populist_party:0 "Ganap-Sakdalista Coalition"
+PHL_national_populist_party:0 "Ganap-Sakdalista Koalisyon"
 PHL_national_populist_party_long:0 "Ganap-Sakdalista Koalisyon(Ganap-Sakdalista Coalition)"
 
 ### Opinion Modifiers ###
