--- a/localisation/KR_Siam_l_english.yml
+++ b/localisation/KR_Siam_l_english.yml
@@ -10,31 +10,31 @@ SIA_RPC_neutral:0 "Normal Harvest Year"
 SIA_RPC_bad:0 "Abysmal Harvest Year"
 
 ### Parties Siam/Thailand ###
-SIA_totalist_party:0 "Communist Party of Siam"
+SIA_totalist_party:0 "Pak Kommunist Siam"
 SIA_totalist_party_long:0 "Pak Kommunist Siam(Communist Party of Siam)"
-SIA_totalist_party_TH:0 "Communist Party of Thailand"
+SIA_totalist_party_TH:0 "Pak Kommunist Thai"
 SIA_totalist_party_TH_long:0 "Pak Kommunist Thai(Communist Party of Thailand)"
-SIA_radical_socialist_party:0 "Labour Party"
+SIA_radical_socialist_party:0 "Pak Sahachip"
 SIA_radical_socialist_party_long:0 "Pak Sahachip(Labour Party)"
-SIA_syndicalist_party:0 "Syndicalist Party of Siam"
+SIA_syndicalist_party:0 "Khana Sahakarn Siam"
 SIA_syndicalist_party_long:0 "Khana Sahakarn Siam(Syndicalist Party of Siam))"
-SIA_syndicalist_party_TH:0 "Syndicalist Party of Thailand"
+SIA_syndicalist_party_TH:0 "Khana Sahakarn Thai"
 SIA_syndicalist_party_TH_long:0 "Khana Sahakarn Thai(Syndicalist Party of Thailand)"
-SIA_social_democrat_party:0 "Socialist Party"
+SIA_social_democrat_party:0 "Pak Sangkhomniyom"
 SIA_social_democrat_party_long:0 "Pak Sangkhomniyom(Socialist Party)"
-SIA_social_liberal_party:0 "Social Action Party"
+SIA_social_liberal_party:0 "Pak Kijsangkhom"
 SIA_social_liberal_party_long:0 "Pak Kijsangkhom(Social Action Party)"
-SIA_market_liberal_party:0 "Liberal Party"
+SIA_market_liberal_party:0 "Pak Prachaseri"
 SIA_market_liberal_party_long:0 "Pak Prachaseri(Liberal Party)"
-SIA_social_conservative_party:0 "Democrat Party"
+SIA_social_conservative_party:0 "Pak Prachathipat"
 SIA_social_conservative_party_long:0 "Pak Prachathipat(Democrat Party)"
-SIA_authoritarian_democrat_party:0 "Supreme Siamese Council of State "
+SIA_authoritarian_democrat_party:0 "Aphirattamontri Sapha"
 SIA_authoritarian_democrat_party_long:0 "Aphirattamontri Sapha(Supreme Siamese Council of State)"
-SIA_authoritarian_democrat_party_reform:0 "People's Council"
-SIA_authoritarian_democrat_party_reform_long:0 "Khanagummakarn Ratsadon (People's Council)"
+SIA_authoritarian_democrat_party_reform:0 "Khanagummakarn Ratsadon"
+SIA_authoritarian_democrat_party_reform_long:0 "Khanagummakarn Ratsadon(People's Council)"
 SIA_paternal_autocrat_party:0 "Boworadet Faction"
 SIA_paternal_autocrat_party_long:0 "Boworadet Faction"
-SIA_national_populist_party:0 "People's Party"
+SIA_national_populist_party:0 "Khana Ratsadon"
 SIA_national_populist_party_long:0 "Khana Ratsadon(People's Party)"
 
 ### Tech Teams/Companies ### (Old - kept here for future reference, please don't delete it) ###
