Finishing Cambodian political set-up

--- a/localisation/KR_Cambodia_l_english - Copy.yml
+++ b/localisation/KR_Cambodia_l_english - Copy.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
 
 ### Parties ###
-CAM_totalist_party:0 "Konabaksa Kom Mouy Ni Sa Kampouchea"
-CAM_totalist_party_long:0 "Konabaksa Kom Mouy Ni Sa Kampouchea(Communist Party of Kampuchea)"
+CAM_totalist_party:0 "Baksa Bdevotta Brachachn Khmer"
+CAM_totalist_party_long:0 "Baksa Bdevotta Brachachn Khmer(Khmer People's Revolutionary Party)"
 CAM_radical_socialist_party:0 "Krom Pracheachon"
 CAM_radical_socialist_party_long:0 "Krom Pracheachon(People's Group)"
 CAM_syndicalist_party:0 "Krom Sahakarn Kampouchea"
