Spelling and readability fixes for all

--- a/localisation/KR_New_England_l_english.yml
+++ b/localisation/KR_New_England_l_english.yml
@@ -48,7 +48,7 @@ NEE_coast_guard_desc:0 "We should reorganise the various Coast Guard of the diff
 NEE_submarines_effort:0 "Submarine tactics and doctrines"
 NEE_submarines_effort_desc:0 "We should focus on sinking the enemies ships before they can even arrive to New England. The navies of the International may very well try to invade New England and we should focus on sinking their ships before they ever arrive near our shores."
 NEE_submarine_doctrines:0 "Submarine Effort"
-NEE_submarine_doctrines_desc:0 "As we focus on Submarines we should focus on building up the navy bases to produce more Submarines and help modernise our submarine fleet. This will make sure that no enemy will apporach the shores of New England."
+NEE_submarine_doctrines_desc:0 "As we focus on Submarines we should focus on building up the navy bases to produce more Submarines and help modernise our submarine fleet. This will make sure that no enemy will approach the shores of New England."
 NEE_protect_trade:0 "Protect our Trade"
 NEE_protect_trade_desc:0 "Our principal focus of the New England Coast Guard should be to protect our trade. We are after all a small trading country, and our navy should be geared towards preventing any threats from harming our convoys and trade ships."
 NEE_new_admirals:0 "Naval Station Newport"
@@ -122,7 +122,7 @@ aus_refugees:0 "AUS Refugees"
 great_england_hurricane:0 "Great New England Hurricane"
 NEE_battle_planning:0 "Joint Chiefs of Staff"
 NEE_cruiser_tank:0 "Cruiser Tanks"
-NEE_puritan_work_ethic:0 "Puritian Work Ethic"
+NEE_puritan_work_ethic:0 "Puritan Work Ethic"
 NEE_towns:0 "New England Towns"
 NEE_atlantic_trades:0 "Atlantic Trade Ties"
 NEE_new_england_irish_trade:0 "New England - Irish Trade"
@@ -161,9 +161,10 @@ NEE_new_englander_irish_trade:0 "New England - Irish Trade ties"
 NEE_freindship_IRE:0 "New England - Irish Friendship"
 NEE_pacific_ties_trade:0 "Pacific States - New England Trade connections"
 NEE_pacific_ties_CAL:0 "New England - Pacific States ties"
+
 ### Events ###
 neeflavor.1.t:0 "The Occupation of New England"
-neeflavor.1.d:0 "The outbreak of civil war has left the New England region lightly defended and vulnurable to occupation. If we strike first, we could close a weak point on our Eastern Flank and strengthen our position against an invasion from a hostile American power. All but abandoned by their government, we anticipate our New England cousins will welcome our intervention."
+neeflavor.1.d:0 "The outbreak of civil war has left the New England region lightly defended and vulnerable to occupation. If we strike first, we could close a weak point on our Eastern Flank and strengthen our position against an invasion from a hostile American power. All but abandoned by their government, we anticipate our New England cousins will welcome our intervention."
 neeflavor.1.a:0 "Seize New England!"
 neeflavor.1.b:0 "It is too risky."
 neeflavor.2.t:0 "Canada seizes New England"
@@ -202,7 +203,7 @@ neeflavor.10.t:0 "Refugees from the Combined Syndicates"
 neeflavor.10.d:0 "The Railroad is a success, refugees from CSA territory are fleeing to New England in droves. Many are Capitalists from the Detroit automotive companies and Chicago factories. This could benefit our own industrial expansion."
 neeflavor.10.a:0 "Excellent!"
 neeflavor.11.t:0 "Refugees from the USA"
-neeflavor.11.d:0 "The Railroad is a success, refugees from United States territory are fleeing to New England in droves. Many are from the middle class who fear their loss of liberty may lead to worse things. Thier technical knowlege and spending power could greatly increase our industrial output."
+neeflavor.11.d:0 "The Railroad is a success, refugees from United States territory are fleeing to New England in droves. Many are from the middle class who fear their loss of liberty may lead to worse things. Thier technical knowledge and spending power could greatly increase our industrial output."
 neeflavor.11.a:0 "Excellent!"
 neeflavor.12.t:0 "Refugees from the American Union State"
 neeflavor.12.d:0 "The Railroad is a success, refugees from AUS territory are fleeing to New England in droves. Many are minorities who have felt the pinch from white supremacist groups around the AUS that, while not officially supported by Long's government, flourish under it."
