Changed an Irish focus

--- a/localisation/KR_Ireland_l_english.yml
+++ b/localisation/KR_Ireland_l_english.yml
@@ -1094,14 +1094,14 @@ IRE_MARINES:0 "Muirshaighdiúirí"
 IRE_MARINES_desc:0 "Now that we have expanded our navy, we should consider the training of an elite unit of marines to spearhead a land invasion. If this was to be successful we could finally take the 700 years fight for Irish freedom to British land."
 
 # Defence
-IRE_HOMEDEFENSE:0 "Córais Chosanta"
-IRE_HOMEDEFENSE_desc:0 "Our military has proposed the building of a series of forts that will serve the dual purpose of protecting our three major cities from enemy invasion and isolating the enemy in the event they should be invaded by sea."
+IRE_HOMEDEFENSE:0 "Fortify the Shannon"
+IRE_HOMEDEFENSE_desc:0 "One of Ireland's key natural landmarks is the River Shannon, dividing the east and west of Ireland. Our military has proposed fortifying both sides of the river, so that we can hold the line along the Shannon in the event of an enemy invasion."
 IRE_COASTALDEFENSE:0 "An Balla Éireannach"
 IRE_COASTALDEFENSE_desc:0 "Our next proposal for the defence of Ireland is to build a wall of coastal defences along Ireland's eastern shore, where a naval invasion is most likely to take place."
 IRE_ANTIAIR:0 "Anti-Air Batteries"
 IRE_ANTIAIR_desc:0 "Despite the grave threat that the British air force poses to Ireland, we have been slow to build any defences against them in the event of a declaration of war. This must change, and quickly."
 IRE_CITADELPROJECT:0 "Tearmann - The Citadel Project"
-IRE_CITADELPROJECT_desc:0 "While we have focused on defending the coasts and the land around our major cities, the cities themselves have remained somewhat unprotected. We have come up with a plan known as the Citadel Project, the first stage of the project would be to erect land forts in those cities protecting them from assault."
+IRE_CITADELPROJECT_desc:0 "While we have focused on fortifying the coasts and the rivers, the cities themselves have remained somewhat unprotected. We have come up with a plan known as the Citadel Project, the first stage of the project would be to erect land forts in our major cities protecting them from assault."
 IRE_CITADELDUBLIN:0 "Citadel Dublin"
 IRE_CITADELDUBLIN_desc:0 "The second stage of the plan is to completely fortify Dublin with forts, anti-aircraft equipment, coastal forts and radar. We must either choose to secure Dublin or Belfast as we don't have the resources to fortify both."
 IRE_CITADELBELFAST:0 "Citadel Belfast"
