bit more work on Spain

--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -345,6 +345,11 @@ sprc.209.d:0 "The exiles who have been training in [SRI.GetNameDef] have returne
 sprc.210.t:0 "Returning from Britain"
 sprc.210.d:0 "The exiles who have been training in the Union of Britain have returned!"
 
+sprc.211.t:0 "Madrid Has Been Taken"
+sprc.211.d:0 "Our forces have taken the city of Madrid!"
+sprc.211.a:0 "We must scavenge what we can!"
+sprc.211.b:0 "Leave the city as it stands"
+
 ### Post-War ###
 
 sprc.220.t:0 "Victory!"
@@ -380,12 +385,12 @@ sprc.305.t:0 "Italian Supplies and Arms"
 sprc.305.d:0 "With our trade deal with [ITA.GetNameDef], we have been able to stockpile some arms and supplies to outfit a well-equipped militia unit."
 
 sprc.306.t:0 "A Plot is Discovered"
-sprc.306.d:0 "Our agents have discovered a plot to kill the Spanish Crown Prince - we think the Carlists are behind it, clearly wanting to pave the path for Xavier to ascend to the Spanish throne. How should we react?"
+sprc.306.d:0 "Our agents have discovered a plot to kill the Spanish Crown Prince, Juan III - we think the Carlists are behind it, clearly wanting to pave the path for Xavier to ascend to the Spanish throne. How should we react?"
 sprc.306.a:0 "Use it as leverage with the Kingdom"
 sprc.306.b:0 "Let them do it"
 
 sprc.307.t:0 "A CNT-FAI Offer"
-sprc.307.d:0 "The CNT-FAI has secretly approached us with information they claim could save a very important life - namely that of the royal heir. If we surrender to them, they will grant clemency for the government and Royal Family. If we do not, the life of the heir and the future of the kingdom will be in serious jeapordy. That is, of course, if we believe them."
+sprc.307.d:0 "The CNT-FAI has secretly approached us with information they claim could save a very important life - namely that of Juan III, the royal heir. If we surrender to them, they will grant clemency for the government and Royal Family. If we do not, the life of the heir and the future of the kingdom will be in serious jeapordy. That is, of course, if we believe them."
 sprc.307.a:0 "Never! - the royal family is safe"
 sprc.307.b:0 "For the sake of the royal family, we should agree"
 
@@ -402,17 +407,18 @@ sprc.310.d:0 "Our plot to assassinate the royal heir was, it seems, intercepted 
 sprc.310.a:0 "It was worth the shot"
 
 sprc.311.t:0 "Assassination Plot Fails!"
-sprc.311.d:0 "A Carlist plot to assassinate the royal heir only barely failed this morning. A bomb went off when the regent was reviewing troops, but he was only wounded and is expected to pull through."
+sprc.311.d:0 "A Carlist plot to assassinate Juan III, the royal heir, only barely failed this morning. A bomb went off when the prince was reviewing troops, but he was only wounded and is expected to pull through."
 sprc.311.a:0 "That's a relief!"
 
-sprc.312.d:0 "Our plot to assassinate the royal heir has failed. It seems the crown prince was injured by our bomb, but is expected to fully recover from his injuries."
+sprc.312.d:0 "Our plot to assassinate the royal heir has failed. It seems Crown Prince Juan III was injured by our bomb, but is expected to fully recover from his injuries."
 sprc.312.a:0 "Foiled!"
 
 sprc.313.t:0 "The Crown Prince is Dead!"
-sprc.313.d:0 "Last night a group of assassins killed the crown prince! He had been in the Regency position with his father's coma. But now there is no true heir to the throne! Someone must act quickly to keep the country together!"
+sprc.313.d:0 "Last night a group of assassins killed the crown prince, Juan III! He had been in the Regency position with his father's coma. But now there is no true heir to the throne! Someone must act quickly to keep the country together!"
 sprc.313.a:0 "Miguel Ferrer takes control"
 sprc.313.b:0 "Franco Bahamonde becomes the regent"
 sprc.313.c:0 "J.M. Gil-Robles Quiñones retains the government"
+sprc.313.e:0 "We must give in to Xavier"
 
 sprc.314.t:0 "The Kingdom of Spain Gives In"
 sprc.314.d:0 "With the assassination of the Crown Prince the Kingdom has been thrown into even more chaos than ever. Their government has agreed to join our cause and to crown Xavier as the King of Spain in order for peace!"
