--- a/localisation/KR_Partitions_l_english.yml
+++ b/localisation/KR_Partitions_l_english.yml
@@ -631,3 +631,15 @@ DEN_forced_schleswig1:0 "Forced us to give out Northern Schleswig"
 DEN_forced_schleswig2:0 "Forced us to give out Northern Schleswig"
 PSS_forced_thuringia1:0 "Forced us to give out Thuringia"
 PSS_forced_thuringia2:0 "Forced us to give out Thuringia"
+GER_liberated_UK:0 "Germany liberated the United Kingdom"
+GER_created_republic_GBR:0 "Germany created the British Republic"
+NFA_refused_deal_GER1:0 "National France refused the deal"
+NFA_refused_deal_GER2:0 "National France refused the deal"
+NFA_accepted_deal_GER:0 "National France accepted the deal"
+GER_supported_flawa_claim:0 "Supported the Belgian claims"
+GER_ceded_flawa_claim:0 "Ceded French Flanders"
+GER_refused_flawa_claim:0 "Refused to cede French Flanders"
+BEL_ceded_flanders1:0 "Ceded French Flanders"
+BEL_ceded_flanders2:0 "Ceded French Flanders"
+GER_asked_join_entente:0 "Germany asked to join the Entente"
+GER_joined_entente_op:0 "Germany joined the Entente"
