some tweaks to the CSA and a portrait for New England

--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -533,23 +533,23 @@ combinedsyndicates.101.t:0 "Choosing a Deputy Secretary"
 combinedsyndicates.101.d:0 "Now that Elizabeth Gurley Flynn has been chosen as the General Secretary, she must choose who will assist her at the helm of government as her Deputy Secretary."
 combinedsyndicates.101.a:0 "Carlo Tresca's longstanding friendship serves him well"
 combinedsyndicates.101.b:0 "James P. Cannon's union links serve him well"
-combinedsyndicates.101.c:0 "Paul Mattick's hard-nosed approach wins favours"
+combinedsyndicates.101.c:0 "Arturo Giovanitti's hard-nosed approach wins favours"
 combinedsyndicates.101.e:0 "Eugene Dennis's union links sweep him to power"
 combinedsyndicates.102.t:0 "Choosing a Deputy Secretary"
 combinedsyndicates.102.d:0 "Having come into power, Norman Thomas must decide who can help him with the Grand American Project."
 combinedsyndicates.102.a:0 "James P. Cannon's union links serve him well"
 combinedsyndicates.102.b:0 "Joseph P. Lash has the right credentials"
-combinedsyndicates.102.c:0 "Robert M. La Follette's attitude wins him the task"
+combinedsyndicates.102.c:0 "Elizabeth Gurley Flynn's attitude wins her the job"
 combinedsyndicates.102.e:0 "Carlo Tresca's economic programs get him the job"
 combinedsyndicates.103.t:0 "Appointment of a New General Secretary"
 combinedsyndicates.103.d:0 "Having come into power, Ben Gitlow has to figure out who will help him run the country."
-combinedsyndicates.103.a:0 "Jay Lovestone's friendship serves him well"
+combinedsyndicates.103.a:0 "Max Schactman's friendship serves him well"
 combinedsyndicates.103.b:0 "Carlo Tresca's union links bring him into the fold"
 combinedsyndicates.103.c:0 "Robert M. La Follette's attitude wins him the task"
-combinedsyndicates.103.e:0 "Norman Thomas's idealism gets him the job"
+combinedsyndicates.103.e:0 "Elizabeth Gurley Flynn's attitude wins her the job"
 combinedsyndicates.104.d:0 "Having come into power, William Z. Foster faces the key decision of who is to be his right hand man."
 combinedsyndicates.104.a:0 "Bayard Rustin's unique viewpoint gets him in"
-combinedsyndicates.104.b:0 "Max Shachtman's economic programs get him the job"
+combinedsyndicates.104.b:0 "Jay Fox's economic programs get him the job"
 combinedsyndicates.104.c:0 "Eugene Dennis's union links sweep him to power"
 combinedsyndicates.104.e:0 "Merge the Posts! Centralisation starts here!"
 combinedsyndicates.105.t:0 "Choosing a Deputy Secretary"
@@ -557,7 +557,7 @@ combinedsyndicates.105.d:0 "Now that Earl Browder has been elected as the Genera
 combinedsyndicates.105.a:0 "Paul Mattick's hard-nosed approach wins favours"
 combinedsyndicates.105.b:0 "William Z. Foster's genius secures him the job"
 combinedsyndicates.105.c:0 "James W. Ford's longstanding friendship serves him well"
-combinedsyndicates.105.e:0 "Eugene Dennis's union links sweep him to power"
+combinedsyndicates.105.e:0 "Micheal Gold's popularity gets him the office"
 combinedsyndicates.106.t:0 "Worker's Confederation"
 combinedsyndicates.106.d:0 "The United States has been remade into a decentralised democratic Confederation of Socialistic States. Power is shared largely between the states themselves with the federal government has been weakened. Though, the Federal government is not totally weak to be irrelevant, it has power to help keep the revolution going as well as dealing with foreign governments. The office of the President and Vice President have been replaced by popularly elected General Secretary and Deputy Secretary positions. Congress has been remade into a unicameral legislature. The ideals of Democratic Confederalism have been implemented throughout the government. The new government is truly for the people, by the people, and of the people."
 combinedsyndicates.106.a:0 "Solidarity Forever!"
