Fixed opinion modifiers across POL and PLC

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -331,6 +331,13 @@ POL_fourth_international_desc:0 "A powerful Syndicalist state, the Soviet Union 
 ### Opinion Modifiers ###
 POL_NATIONALISTS_GOV:0 "Nationalist government in Poland"
 POL_INTERNATIONAL_COMMUNITY:0 "Rejoined the International Community"
+POL_SUBMARINE_WARFARE:0 "Using Unrestricted Submarine Warfare"
+POL_REFUSED_DEMANDS:0 "Refused our Demands"
+POL_ACCEPTED_DEMANDS:0 "Accepted our Demands"
+POL_KRAKOW:0 "Returned Krakow"
+POL_REFUSED_PROTECTION:0 "Refused our Protection"
+POL_REFUSED_ALLIANCE:0 "Refused an Alliance"
+POL_BITTER_LOSER:0 "Bitter Loser"
 POL_WE_AUS:0 "Elected J.K.W. Fryderyk Krystian Saski"
 POL_WE_GER:0 "Elected J.K.W. Fryderyk Krystian Saski"
 POL_CZA_AUS:0 "Elected J.K.W. Augustyn I Czartoryski"
