Syndie PLC no longer forgets it has a military

--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -694,3 +694,4 @@ PLC_select_capital:0 "A New Capital must first be selected before it can be impr
 PLC_nationalists_overthrow_monarchy:0 "§RThe Nationalists seize control!§! \n"
 PLC_syndicalists_overthrow_monarchy:0 "§RThe Syndicalists seize control!§! \n"
 COM_DEMOCRACY:0 "The Commonwealth allows the people to vote"
+PLC_command_tooltip:0 "New Divisions will Form in the Capital\n"
